# Linux-Cloudreve-Sync

./: Cargo.toml  PKGBUILD  README.md  flake.nix  install.sh  package.nix
.github/workflows/: release.yml
assets/: cloudreve-sync.desktop
src/: autostart.rs  local_index.rs  main.rs  model.rs  power.rs  storage.rs  sync.rs  webdav.rs
