[package]
name = "cloudreve-sync"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A small two-way Cloudreve desktop sync client"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
blake3 = "1.8"
dirs = "6.0"
egui = "0.31"
egui_glow = { version = "0.31", features = ["winit"] }
egui-winit = "0.31"
glow = "0.16"
glutin = "0.32"
glutin-winit = "0.5"
ignore = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }
ksni = { version = "0.3", features = ["blocking"] }
libsql = "0.9"
log = "0.4"
percent-encoding = "2.3"
quick-xml = { version = "0.37", features = ["serialize"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.43", features = ["fs", "macros", "rt-multi-thread", "sync", "time"] }
url = "2.5"
uuid = { version = "1.12", features = ["v4", "serde"] }
walkdir = "2.5"
winit = "0.30"

[dev-dependencies]
tempfile = "3.20"

[profile.release]
lto = "thin"
strip = true
